--- a/kokokeyboard/build.gradle
+++ b/kokokeyboard/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.0.2'
 
+    implementation 'com.github.aakira:expandable-layout:1.6.0@aar'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
