chore: still fixing code

--- a/kokokeyboard/build.gradle
+++ b/kokokeyboard/build.gradle
@@ -23,11 +23,12 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    
+
+    implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.0.2'
 
-    implementation 'com.github.aakira:expandable-layout:1.6.0@aar'
+    api 'com.github.aakira:expandable-layout:1.6.0@aar'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0'
