tests: write more tests

--- a/kokokeyboard/build.gradle
+++ b/kokokeyboard/build.gradle
@@ -19,6 +19,14 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
@@ -31,6 +39,8 @@ dependencies {
     api 'com.github.aakira:expandable-layout:1.6.0@aar'
 
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:2.23.0'
+    testImplementation "org.robolectric:robolectric:3.4.2"
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
 }
