--- a/kokokeyboard/build.gradle
+++ b/kokokeyboard/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.novoda.bintray-release'
+apply from: '../.buildsystem/.bintray/bintray.gradle'
 
 android {
     defaultConfig {
