chore: update bintray secrets and project descriptions

--- a/.buildsystem/.bintray/bintray.properties
+++ b/.buildsystem/.bintray/bintray.properties
@@ -1,15 +1,15 @@
 BINTRAY_USER=rowlandoti
 BINTRAY_KEY=Xxx
 BINTRAY_REPO=maven
-BINTRAY_NAME=com.rowland.cartcounter
+BINTRAY_NAME=com.rowland.keyboard
 BINTRAY_ORGANISATION=rowlandoti
-BINTRAY_VCS=https://github.com/RowlandOti/CartCounter.git
-BINTRAY_URL=https://github.com/RowlandOti/CartCounter
+BINTRAY_VCS=https://github.com/RowlandOti/KokoKeyboard.git
+BINTRAY_URL=https://github.com/RowlandOti/KokoKeyboard
 BINTRAY_LICENCES=Apache-2.0
-BINTRAY_GROUPID=com.rowland.cartcounter
-BINTRAY_ARTIFACTID=CartCounter
-BINTRAY_VERSION=1.0.0-beta-1
+BINTRAY_GROUPID=com.rowland.keyboard
+BINTRAY_ARTIFACTID=KokoKeyboard
+BINTRAY_VERSION=0.0.1
 BINTRAY_DRYRUN=false
-BINTRAY_REPONAME=RowlandOti/CartCounter
-BINTRAY_TAGS=Cart,CartCounter,ShoppingCart
-BINTRAY_DESC=Add a cart icon with item counter to the Toolbar. You can increment the counter based on the number of unique items the user has in the shopping cart.
+BINTRAY_REPONAME=RowlandOti/KokoKeyboard
+BINTRAY_TAGS=Android Keyboard,Keyboard,Soft Keyboard
+BINTRAY_DESC=? Implementation of a re-usable custom onscreen keyboard.
