--- a/kokokeyboard/build.gradle
+++ b/kokokeyboard/build.gradle
@@ -37,8 +37,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.0.2'
-
-    api 'com.github.aakira:expandable-layout:1.6.0@aar'
+    
+    api 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.23.0'
