--- a/kokokeyboard/src/main/AndroidManifest.xml
+++ b/kokokeyboard/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.rowland.kokokeyboard" />
+<manifest package="com.rowland.kokokeyboard" />
