--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "kokokeyboard/build.gradle" }}
       - run:
          name: Chmod permissions
          command: sudo chmod +x ./gradlew
@@ -19,7 +19,7 @@ jobs:
       - save_cache:
           paths:
             - ~/.gradle
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "kokokeyboard/build.gradle" }}
       - run:
           name: Run Tests
           command: ./gradlew lint test
@@ -27,8 +27,8 @@ jobs:
           name: Run Tests
           command: ./gradlew test
       - store_artifacts:
-          path: app/build/reports
+          path: kokokeyboard/build/reports
           destination: reports
       - store_test_results:
-          path: app/build/test-results
+          path: kokokeyboard/build/test-results
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
